--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "mongoose": "^8.0.0",
+    "qrcode": "^1.5.0"
+  },
   "engines": {
     "node": "20.x"
   }
 }
-
-
