--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "payment-gateway-mutasi",
+  "name": "wago-store",
   "version": "1.0.0",
-  "description": "Webhook untuk menerima notifikasi dari Macrodroid",
+  "description": "Payment Gateway Sederhana",
   "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "mongoose": "^8.0.0",
-    "qrcode": "^1.5.0"
-  },
-  "engines": {
-    "node": "20.x"
+    "qrcode": "^1.5.3"
   }
 }
